--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-venv
+venv/
 .*
 *.pyc
 .DS_Store
 notebooks/
-/example_notebooks
-/data
+example_notebooks/
+data/
+dist/
+trinary_tree.egg-info
+build
